[package]
name = "nat_puncher"
version = "0.1.0"
edition = "2024"

[dependencies]
godot = "0.3.1"
uuid = { version = "1.17.0", features = ["v4"] }
anyhow = "1.0.98"
futures = "0.3.31"
tarpc = { version = "0.36", features = ["tokio1"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[lib]
crate-type = ["cdylib", "rlib"]
