[package]
name = "nat_puncher"
version = "0.1.0"
edition = "2024"

[dependencies]
godot = "0.3.1"
uuid = { version = "1.17.0", features = ["v4"] }
anyhow = "1.0.98"
futures = "0.3.31"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.13.1", features = ["transport"] }
prost = "0.13.5"

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tonic-build = "0.13.1"