[package]
name = "nat_puncher"
version = "0.1.0"
edition = "2024"

[dependencies]
godot = "0.3.1"
uuid = { version = "1.17.0", features = ["v4"] }
anyhow = "1.0.98"
futures = "0.3.31"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.13.1", features = ["transport"] }
prost = "0.13.5"
rand = "0.9.1"
tokio-stream = "0.1.17"
tokio-util = "0.7.15"
tower = "0.5.2"
tonic-web = "0.13.1"
tower-http = { version = "0.6.6", features = ["cors"] }

[[bin]]
name = "nat_puncher_server"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tonic-build = "0.13.1"
